// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Session Api create() parse the returned data correctly (with #1) 1`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": true,
  "disable_search_persistence": false,
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "language": "en",
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "12340",
  "pseudo": "test1",
  "street": "1, somewhere av.",
  "token": "__FAKE-TOKEN__",
  "type": "user",
}
`;

exports[`Session Api create() parse the returned data correctly (with #2) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "calendar",
  "default_technicians_view": "timeline",
  "disable_contextual_popovers": true,
  "disable_search_persistence": true,
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "group": "operation",
  "id": 2,
  "language": "fr",
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
  "token": "__FAKE-TOKEN__",
  "type": "user",
}
`;

exports[`Session Api create() parse the returned data correctly (with #3) 1`] = `
{
  "additional_street": null,
  "address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "listing",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "email": "nobody@loxya.com",
  "first_name": "?",
  "full_name": "?",
  "group": "operation",
  "id": 3,
  "language": "fr",
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
  "token": "__FAKE-TOKEN__",
  "type": "user",
}
`;

exports[`Session Api create() parse the returned data correctly (with #4) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "CH",
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "email": "visitor@loxya.com",
  "first_name": "Henry",
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "language": "fr",
  "last_name": "Berluc",
  "locality": null,
  "phone": /* Phone Instance => */ "+33794589321",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
  "token": "__FAKE-TOKEN__",
  "type": "user",
}
`;

exports[`Session Api create() parse the returned data correctly (with #5) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "calendar",
  "default_technicians_view": "timeline",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "email": "external@loxya.com",
  "first_name": "Caroline",
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "language": "en",
  "last_name": "Farol",
  "locality": null,
  "phone": /* Phone Instance => */ "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
  "token": "__FAKE-TOKEN__",
  "type": "user",
}
`;

exports[`Session Api get() parse the returned data correctly when its a user (with #1) 1`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": true,
  "disable_search_persistence": false,
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "language": "en",
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "12340",
  "pseudo": "test1",
  "street": "1, somewhere av.",
  "type": "user",
}
`;

exports[`Session Api get() parse the returned data correctly when its a user (with #1) 2`] = `
{
  "additional_street": null,
  "address": "1, somewhere av.
12340 Megacity",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": true,
  "disable_search_persistence": false,
  "email": "tester@loxya.com",
  "first_name": "Jean",
  "full_name": "Jean Fountain",
  "group": "administration",
  "id": 1,
  "language": "en",
  "last_name": "Fountain",
  "locality": "Megacity",
  "phone": null,
  "postal_code": "12340",
  "pseudo": "test1",
  "street": "1, somewhere av.",
  "type": "user",
}
`;

exports[`Session Api get() parse the returned data correctly when its a user (with #2) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "calendar",
  "default_technicians_view": "timeline",
  "disable_contextual_popovers": true,
  "disable_search_persistence": true,
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "group": "operation",
  "id": 2,
  "language": "fr",
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
  "type": "user",
}
`;

exports[`Session Api get() parse the returned data correctly when its a user (with #2) 2`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "calendar",
  "default_technicians_view": "timeline",
  "disable_contextual_popovers": true,
  "disable_search_persistence": true,
  "email": "tester2@loxya.com",
  "first_name": "Roger",
  "full_name": "Roger Rabbit",
  "group": "operation",
  "id": 2,
  "language": "fr",
  "last_name": "Rabbit",
  "locality": null,
  "phone": null,
  "postal_code": null,
  "pseudo": "test2",
  "street": null,
  "type": "user",
}
`;

exports[`Session Api get() parse the returned data correctly when its a user (with #3) 1`] = `
{
  "additional_street": null,
  "address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "listing",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "email": "nobody@loxya.com",
  "first_name": "?",
  "full_name": "?",
  "group": "operation",
  "id": 3,
  "language": "fr",
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
  "type": "user",
}
`;

exports[`Session Api get() parse the returned data correctly when its a user (with #3) 2`] = `
{
  "additional_street": null,
  "address": "156 bis, avenue des tests poussés
88080 Wazzaville",
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "listing",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "email": "nobody@loxya.com",
  "first_name": "?",
  "full_name": "?",
  "group": "operation",
  "id": 3,
  "language": "fr",
  "last_name": "?",
  "locality": "Wazzaville",
  "phone": null,
  "postal_code": "88080",
  "pseudo": "nobody",
  "street": "156 bis, avenue des tests poussés",
  "type": "user",
}
`;

exports[`Session Api get() parse the returned data correctly when its a user (with #4) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "CH",
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "email": "visitor@loxya.com",
  "first_name": "Henry",
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "language": "fr",
  "last_name": "Berluc",
  "locality": null,
  "phone": /* Phone Instance => */ "+33794589321",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
  "type": "user",
}
`;

exports[`Session Api get() parse the returned data correctly when its a user (with #4) 2`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "CH",
  "default_bookings_view": "calendar",
  "default_technicians_view": "listing",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "email": "visitor@loxya.com",
  "first_name": "Henry",
  "full_name": "Henry Berluc",
  "group": "readonly-planning-general",
  "id": 4,
  "language": "fr",
  "last_name": "Berluc",
  "locality": null,
  "phone": /* Phone Instance => */ "+33794589321",
  "postal_code": null,
  "pseudo": "TheVisitor",
  "street": null,
  "type": "user",
}
`;

exports[`Session Api get() parse the returned data correctly when its a user (with #5) 1`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "calendar",
  "default_technicians_view": "timeline",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "email": "external@loxya.com",
  "first_name": "Caroline",
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "language": "en",
  "last_name": "Farol",
  "locality": null,
  "phone": /* Phone Instance => */ "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
  "type": "user",
}
`;

exports[`Session Api get() parse the returned data correctly when its a user (with #5) 2`] = `
{
  "additional_street": null,
  "address": null,
  "administrative_area": null,
  "country": /* Country Instance => */ "FR",
  "default_bookings_view": "calendar",
  "default_technicians_view": "timeline",
  "disable_contextual_popovers": false,
  "disable_search_persistence": false,
  "email": "external@loxya.com",
  "first_name": "Caroline",
  "full_name": "Caroline Farol",
  "group": "readonly-planning-general",
  "id": 5,
  "language": "en",
  "last_name": "Farol",
  "locality": null,
  "phone": /* Phone Instance => */ "+33786325500",
  "postal_code": null,
  "pseudo": "caroline",
  "street": null,
  "type": "user",
}
`;
